--- a/app/style.scss
+++ b/app/style.scss
@@ -2,13 +2,13 @@
 * {
   box-sizing: border-box;
 }
-body {
-background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
-min-height: 100vh;
-font-family: 'Fira Sans', sans-serif;
-  display: flex;
-}
+// body {
+// background-color: #FFE53B;
+// background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+// min-height: 100vh;
+// font-family: 'Fira Sans', sans-serif;
+//   display: flex;
+// }
 
 .blog-slider {
     width: 95%;
