--- a/app/globals.css
+++ b/app/globals.css
@@ -83,42 +83,71 @@ body {
   /* transform: translate(-50%, -50%); */
 }
 .section1 {
-  width: 100%;
+}
+.wrapper1 {
+
+}
+.item1 {
+
+}
+.item1 .header1 {
+
+}
+.item1 .header1 h1 {
+
+}
+.item1 .content1 {
+
+}
+.item1 .content1 p {
+
+}
+.section {
+  /* width: 100%; */
   height: 100vh;
   display: flex;
   justify-content: center;
 }
-.wrapper1 {
-  width: 100%;
-  padding: 50px 200px;
-  padding-bottom: 0;
+
+/* .spacer {
+  background-color: teal;
+} */
+
+.wrapper {
+  /* width: 100%; */
+  /* padding: 50px 200px; */
+  /* padding-bottom: 0; */
   visibility: hidden;
 }
-.item1 {
-  width: 400px;
+
+.item {
+  /* width: 400px; */
   border-radius: 5px;
   overflow: hidden;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
-.item1 .header1 {
-  background-color: rgb(53, 52, 52);
-  padding: 10px;
-  color: white;
+
+.item .header {
+  background-color: rgb(34, 33, 33);
+  /* padding: 10px; */
 }
-.item1 .header1 h1 {
-  font-size: 24px;
-  margin: 0;
+
+.item .header h1 {
+  /* font-size: 24px; */
+  /* margin: 0; */
 }
-.item1 .content1 {
-  background-color: rgb(26, 26, 26);
+
+.item .content {
+  background-color: #121212;
   overflow: hidden;
 }
-.item1 .content1 p {
-  margin: 0;
-  padding: 10px;
-  font-size: 18px;
-  color: white;
+
+.item .content p {
+  /* margin: 0; */
+  /* padding: 10px; */
+  /* font-size: 18px; */
 }
+
 .animate-gradient {
   background-size: 200% 100%; /* Adjusted for a smoother transition */
   background-image: linear-gradient(to right, #44BCFF, #FF44EC, #e6b834, #5de729);
