--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,10 @@ body {
 
 }
 .item1 {
-
+  
+}
+.item2 {
+  position: relative;
 }
 .item1 .header1 {
 
@@ -100,6 +103,30 @@ body {
 
 }
 .item1 .content1 p {
+
+}
+.slides-container{
+  padding: 7px; 
+  display: inline-block;
+  width: fit-content;
+  border-radius: 10px;
+  background-color: rgb(55, 54, 54);
+}
+.section2{
+  width: 20px; /* Adjust width as needed */
+  height: 10px; /* Adjust height as needed */
+  background-color: #cccfca;
+  box-shadow: 0 0 8px rgba(204, 207, 202, 0.75);
+  border-radius: 5px;
+  margin-right: 15px;
+  /* margin-bottom: 20px; */
+  
+}
+.section2:last-child{
+  margin-right: 0;
+}
+.sections-inner {
+  display: flex;
 
 }
 .section {
