--- a/app/globals.css
+++ b/app/globals.css
@@ -133,7 +133,15 @@ body {
 }
 .section {
   /* width: 100%; */
-  height: 100vh;
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.section1 {
+  /* width: 100%; */
   display: flex;
   justify-content: center;
 }
